--- a/.github/workflows/main_discord-bot.yml
+++ b/.github/workflows/main_discord-bot.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # This is required for actions/checkout
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -28,21 +28,14 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-
+      
       - name: Install dependencies
         run: pip install -r requirements.txt
-
-      - name: Upgrade pip (optional)
-        run: pip install --upgrade pip
-
+        
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
-      - name: Prepare deployment package
-        run: |
-          mkdir -p deploy_package
-          cp -r . deploy_package
-          rm -rf deploy_package/venv  # Exclude virtual environment
-          zip -r release.zip deploy_package
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
@@ -50,6 +43,7 @@ jobs:
           name: python-app
           path: |
             release.zip
+            !venv/
 
   deploy:
     runs-on: ubuntu-latest
@@ -57,18 +51,17 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
 
-      - name: Unzip artifact to correct directory
-        run: |
-          mkdir -p /home/site/wwwroot
-          unzip -o release.zip -d /home/site/wwwroot
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
 
+      
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
@@ -76,4 +69,3 @@ jobs:
           app-name: 'discord-bot'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_EBAE1D23A579494883D8B94806D2FA3A }}
-          package: '/home/site/wwwroot'
